[gd_scene load_steps=6 format=3 uid="uid://cgv8wc1ikc084"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_lkydj"]
[ext_resource type="PackedScene" uid="uid://bev73wi0l466q" path="res://quarto1.tscn" id="1_pel1v"]
[ext_resource type="Texture2D" uid="uid://dg237mjskfwcs" path="res://art/Cenario_2.png" id="4_dip5b"]
[ext_resource type="PackedScene" uid="uid://havx56pqb2w6" path="res://zoom_area.tscn" id="4_esrj5"]
[ext_resource type="Texture2D" uid="uid://bf887wu02fula" path="res://art/Cenario_3.png" id="5_1rudw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lkydj")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.6, 0.6)
anchor_mode = 0

[node name="Bedroom_ang1" parent="." instance=ExtResource("1_pel1v")]

[node name="ZoomArea2D" parent="Bedroom_ang1" instance=ExtResource("4_esrj5")]
position = Vector2(1361.25, 585)

[node name="Bedroom_ang2" parent="." instance=ExtResource("1_pel1v")]
visible = false
texture = ExtResource("4_dip5b")

[node name="Bedroom_ang3" parent="." instance=ExtResource("1_pel1v")]
visible = false
texture = ExtResource("5_1rudw")

[node name="RightTextureButton" type="TextureButton" parent="."]
offset_left = 1184.0
offset_right = 1360.0
offset_bottom = 768.0

[node name="LeftTextureButton" type="TextureButton" parent="."]
offset_right = 176.0
offset_bottom = 768.0

[connection signal="pressed" from="RightTextureButton" to="." method="_on_right_texture_button_pressed"]
[connection signal="pressed" from="LeftTextureButton" to="." method="_on_left_texture_button_pressed"]
